// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectInput /> should have some hintText 1`] = `
<div
  class="base width_full"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <div
        class="base display_flex row_mobile_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_stretch wrapping_noWrap"
      >
        <div
          class="base flexGrow_1 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base auto_mobile_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <select
              autocomplete="off"
              class="base block appearance select base block appearance input width_full input_itself_root_base"
            >
              <option
                value="a"
              >
                Value 1
              </option>
              <option
                value="b"
              >
                Value 2
              </option>
              <option
                value="c"
              >
                Value 3
              </option>
            </select>
          </div>
        </div>
        <div
          class="base flexGrow_0 flexShrink_0 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <i
              class="base display_block medium_mobile_base base 4_mobile_base"
              role="presentation"
            >
              <svg
                class="base display_block width_full height_full"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
        >
          Hello World!
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
  <p
    class="base textAlign_left root_base sizes_2_base fontWeight_normal_base base hintText_base styleNode_base"
  >
    hint text
  </p>
</div>
`;

exports[`<SelectInput /> should match snapshot 1`] = `
<div
  class="base width_full"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <div
        class="base display_flex row_mobile_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_stretch wrapping_noWrap"
      >
        <div
          class="base flexGrow_1 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base auto_mobile_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <select
              autocomplete="off"
              class="base block appearance select base block appearance input width_full input_itself_root_base"
            >
              <option
                value="a"
              >
                Value 1
              </option>
              <option
                value="b"
              >
                Value 2
              </option>
              <option
                value="c"
              >
                Value 3
              </option>
            </select>
          </div>
        </div>
        <div
          class="base flexGrow_0 flexShrink_0 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <i
              class="base display_block medium_mobile_base base 4_mobile_base"
              role="presentation"
            >
              <svg
                class="base display_block width_full height_full"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
        >
          Hello World!
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when active 1`] = `
<div
  class="base width_full"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <div
        class="base display_flex row_mobile_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_stretch wrapping_noWrap"
      >
        <div
          class="base flexGrow_1 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base auto_mobile_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <select
              autocomplete="off"
              class="base block appearance select base block appearance input width_full input_itself_root_base"
            >
              <option
                value="a"
              >
                Value 1
              </option>
              <option
                value="b"
              >
                Value 2
              </option>
              <option
                value="c"
              >
                Value 3
              </option>
            </select>
          </div>
        </div>
        <div
          class="base flexGrow_0 flexShrink_0 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <i
              class="base display_block medium_mobile_base base 4_mobile_base"
              role="presentation"
            >
              <svg
                class="base display_block width_full height_full"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base activeBorderColour_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base activeBorderColour_base"
        style="width: 16px;"
      >
        <label
          class="placeholder_default_standard_base activeColour_base placeholderPlacement_shifted_base"
        >
          Hello World!
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base activeBorderColour_base"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched 1`] = `
<div
  class="base width_full"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <div
        class="base display_flex row_mobile_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_stretch wrapping_noWrap"
      >
        <div
          class="base flexGrow_1 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base auto_mobile_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <select
              autocomplete="off"
              class="base block appearance select base block appearance input width_full input_itself_root_base"
            >
              <option
                value="a"
              >
                Value 1
              </option>
              <option
                value="b"
              >
                Value 2
              </option>
              <option
                value="c"
              >
                Value 3
              </option>
            </select>
          </div>
        </div>
        <div
          class="base flexGrow_0 flexShrink_0 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <i
              class="base display_block medium_mobile_base base 4_mobile_base"
              role="presentation"
            >
              <svg
                class="base display_block width_full height_full"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
        >
          Hello World!
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="base width_full"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <div
        class="base display_flex row_mobile_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_stretch wrapping_noWrap"
      >
        <div
          class="base flexGrow_1 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base auto_mobile_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <select
              autocomplete="off"
              class="base block appearance select base block appearance input width_full input_itself_root_base"
            >
              <option
                value="a"
              >
                Value 1
              </option>
              <option
                value="b"
              >
                Value 2
              </option>
              <option
                value="c"
              >
                Value 3
              </option>
            </select>
          </div>
        </div>
        <div
          class="base flexGrow_0 flexShrink_0 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <i
              class="base display_block medium_mobile_base base 4_mobile_base"
              role="presentation"
            >
              <svg
                class="base display_block width_full height_full"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
        >
          Hello World!
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot when touched and valid 1`] = `
<div
  class="base width_full"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <div
        class="base display_flex row_mobile_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_stretch wrapping_noWrap"
      >
        <div
          class="base flexGrow_1 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base auto_mobile_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <select
              autocomplete="off"
              class="base block appearance select base block appearance input width_full input_itself_root_base"
            >
              <option
                value="a"
              >
                Value 1
              </option>
              <option
                value="b"
              >
                Value 2
              </option>
              <option
                value="c"
              >
                Value 3
              </option>
            </select>
          </div>
        </div>
        <div
          class="base flexGrow_0 flexShrink_0 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <i
              class="base display_block medium_mobile_base base 4_mobile_base"
              role="presentation"
            >
              <svg
                class="base display_block width_full height_full"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_default_base"
        >
          Hello World!
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<SelectInput /> should match snapshot with prefix icon 1`] = `
<div
  class="base width_full input-class"
>
  <div
    class="base root_base"
  >
    <div
      class="base width_full input_root"
    >
      <i
        class="base display_block medium_mobile_base iconRoot_base icon_prefix styleNode_base"
        role="presentation"
      >
        <svg
          class="base display_block width_full height_full"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <div
        class="base display_flex row_mobile_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_stretch wrapping_noWrap"
      >
        <div
          class="base flexGrow_1 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base auto_mobile_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <select
              autocomplete="off"
              class="base block appearance select base block appearance input width_full input_itself_root_base input_itself_prefixed_base"
            />
          </div>
        </div>
        <div
          class="base flexGrow_0 flexShrink_0 none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base none_mobile_base none_tablet_base none_desktop_base none_largeDesktop_base align_centre"
        >
          <div
            class="base display_flex width_full height_full"
          >
            <i
              class="base display_block medium_mobile_base base 4_mobile_base"
              role="presentation"
            >
              <svg
                class="base display_block width_full height_full"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.413 8.584L12 13.17l4.586-4.586L18 9.998l-6 6-6-6 1.413-1.414z"
                />
              </svg>
            </i>
          </div>
        </div>
      </div>
    </div>
    <div
      class="borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="placeholder_default_standard_base placeholder_empty_base placeholderPlacement_defaultPrefixed_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;
